--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>ar.edu.ungs</groupId>
-	<artifactId>agenda</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>Agenda App</name>
-	<description>Aplicacion desktop</description>
-  
-  
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>ar.edu.ungs</groupId>
+    <artifactId>agenda</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>Agenda App</name>
+    <description>Aplicacion desktop</description>
+
+
     <developers>
         <developer>
             <id>9999999</id>
@@ -32,6 +32,12 @@
             <version>1.7.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.4.5</version>
+        </dependency>
+
         <!-- Unit testing is mandatory -->
         <dependency>
             <groupId>junit</groupId>
@@ -39,33 +45,33 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-        
+
         <!-- Jasperreports -->
-		<dependency>
-		    <groupId>net.sf.jasperreports</groupId>
-		    <artifactId>jasperreports</artifactId>
-		    <version>6.0.0</version>
-		</dependency>
-	    <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
-		<dependency>
-		    <groupId>commons-logging</groupId>
-		    <artifactId>commons-logging</artifactId>
-		    <version>1.2</version>
-		</dependency>
-	    
-		<!-- Mysql-connector-java -->
-		<dependency>
-		    <groupId>mysql</groupId>
-		    <artifactId>mysql-connector-java</artifactId>
-		    <!--<version>5.1.6</version>-->
-		    <!-- USAR LA VERSIÓN 5.1.44 SI USÁS MYSQL8 --> 
-		    <version>8.0.19</version>
-		</dependency>
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.0.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+        <!-- Mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <!--<version>5.1.6</version>-->
+            <!-- USAR LA VERSIÓN 5.1.44 SI USÁS MYSQL8 -->
+            <version>8.0.19</version>
+        </dependency>
 
     </dependencies>
 
     <build>
-        <defaultGoal>clean compile package exec:java</defaultGoal> 
+        <defaultGoal>clean compile package exec:java</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
